# codepulse

./: .gitignore  AGENTS.md  DEMO.md  README.md  codepulse.md  pyproject.toml
codepulse/: __init__.py  config.py  llm.py  logging.py  tree_parser.py
codepulse/agents/: change_investigator.py  chat_agent.py  explainer.py  pipeline.py  pr_writer.py  prompts.py  risk_analyst.py  state.py  test_advisor.py
codepulse/agents/prompts/: __init__.py  explainer_prompts.py  pr_writer_prompts.py
codepulse/api/: server.py
codepulse/api/routes/: analysis.py  chat.py  graph.py  repos.py
codepulse/cli/: ask_cmd.py  chat_cmd.py  diff_cmd.py  graph_cmd.py  index_cmd.py  main.py  report_cmd.py  repos_cmd.py  status_cmd.py  ui_cmd.py
codepulse/db/: migrations.py  models.py  run_store.py
codepulse/git/: __init__.py  _gitcli.py  commit_meta.py  diff_parser.py  diff_resolver.py  repo_identity.py  symbol_diff.py
codepulse/graph/: __init__.py  client.py  payload.py  queries.py  schema.py
codepulse/indexer/: index_service.py  language_detector.py  parser_worker.py  repo_scanner.py  snapshot.py
codepulse/parsers/: __init__.py  base.py  cpp_parser.py  java_parser.py  python_parser.py  typescript_parser.py
tests/: conftest.py  test_graph_queries.py  test_pipeline.py
ui/: app.py
